# dino-recomp

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakeSettings.json  README.md  aspMain.toml  catsyms.sh  dino.datasyms.toml  dino.dlls.txt  dino.syms.core.toml  dino.syms.dlls.toml  dino.syms.toml  dino.toml  gen-syms.sh  launch.vs.json  patches.toml  run.sh
.github/workflows/: build.yml
N64Recomp/: CMakeLists.txt
RecompiledFuncsManual/: func_8001B4F0.c
assets/: config_menu.rml  launcher.rml  recomp.rcss
assets/config_menu/: cheats.rml  controls.rml  debug.rml  general.rml  graphics.rml  sound.rml
assets/scss/styles/: global.scss
assets/scss/styles/components/: Button.scss  Config.scss  IconButton.scss  InputConfig.scss  Launcher.scss  _components.scss
assets/scss/styles/globals/: _old.scss
assets/scss/styles/mixins/: _typography.scss
assets/scss/styles/pages/config/: _config.scss  cheats.scss  graphics.scss
assets/scss/styles/vars/: _colors.scss
deploy/: io.github.dinosaurplanetrecomp.dino_recomp.desktop  io.github.dinosaurplanetrecomp.dino_recomp.metainfo.xml  io.github.francessco121.dino_recomp.desktop
deploy/appimage/: .gitignore  build.sh
deploy/flatpak/: README.md  build-bundle.sh  io.github.dinosaurplanetrecomp.dino_recomp.yml  io.github.francessco121.dino_recomp.yml
flatpak/: .gitignore  build-bundle.sh  io.github.dinorecomp.dinorecomp.desktop  io.github.dinorecomp.dinorecomp.json  io.github.dinorecomp.dinorecomp.metainfo.xml  io.github.francessco121.dino_recomp.desktop  io.github.francessco121.dino_recomp.metainfo.xml  io.github.francessco121.dino_recomp.yml
icons/: app.rc
include/: dino_sdl.hpp  recomp_helpers.hpp  recomp_ui.h
include/dino/: config.hpp  debug_ui.hpp  error.hpp  game.hpp  init.hpp  input.hpp  recomp_api.hpp  renderer.hpp  sound.hpp
lib/: FindFreetype.cmake
lib/promptfont/: promptfont.h
patches/: .gitignore  Makefile  compile_flags.txt  syms.ld
patches/include/: builtin_dbgui.h  dbgui.h  debug_ui.h  patches.h  recomp_funcs.h  recompui_event_structs.h
patches/src/: audio.c  audio.h  camera.c  cheats.c  cheats.h  culling.c  culling.h  debug_ui.c  dll.c  game_init_hook.c  game_tick_hook.c  gfx_patches.c  gfx_patches.h  menu_patches.c  print.c  recomp_hooks.c  scheduler.c  scissor.c  screens.c  splash_skip.c  xldtob.c
patches/src/builtin_dbgui/: audio_window.c  builtin_dbgui.c  character_cheat_window.c  dlls_window.c  graphics_window.c  memory_window.c  warp_cheat_window.c
rsp/: .gitignore
src/: main.cpp  recomp_api.cpp  ultra_extra.cpp
src/common/: error.hpp  sdl.hpp
src/config/: config.cpp  config.hpp
src/debug_ui/: backend.cpp  backend.hpp  debug_ui.cpp  debug_ui.hpp
src/game/: cheats.cpp
src/init/: audio.cpp  gfx.cpp  mods.cpp  overlays.cpp  patches.cpp  rsp.cpp  threads.cpp
src/input/: controls.cpp  controls.hpp  input.cpp  input.hpp
src/recomp_api/: cheats.cpp  common.cpp  common.hpp  debug.cpp  debug_ui_api.cpp  debug_ui_api.hpp  dll.cpp  func_8001B4F0_hack.cpp  general_api.cpp  general_api.hpp  os_ai.cpp  os_sp.cpp  recomp_data_api.cpp  recomp_data_api.hpp
src/recomp_ui/: recomp_ui.hpp  ui_color_hack.cpp  ui_config.cpp  ui_launcher.cpp  ui_renderer.cpp  ui_rml_hacks.cpp
src/renderer/: hooks.cpp  hooks.hpp  renderer.cpp  renderer.hpp
src/runtime/: audio.cpp  audio.hpp  gfx.cpp  gfx.hpp  mods.cpp  mods.hpp  overlays.cpp  overlays.hpp  patches.cpp  patches.hpp  preload.cpp  preload.hpp  rsp.cpp  rsp.hpp  support.cpp  support.hpp  threads.cpp  threads.hpp
src/ui/: recomp_ui.h  ui_api.cpp  ui_api_events.cpp  ui_api_images.cpp  ui_color_hack.cpp  ui_config.cpp  ui_config_sub_menu.cpp  ui_elements.h  ui_launcher.cpp  ui_mod_details_panel.cpp  ui_mod_menu.cpp  ui_prompt.cpp  ui_renderer.cpp  ui_renderer.h  ui_rml_hacks.cpp  ui_rml_hacks.hpp  ui_state.cpp  ui_utils.cpp
src/ui/core/: ui_context.cpp
src/ui/elements/: ui_button.cpp  ui_element.cpp  ui_label.cpp  ui_radio.cpp  ui_slider.cpp
